--- a/AwesomeLogger/AwesomeLogger.csproj
+++ b/AwesomeLogger/AwesomeLogger.csproj
@@ -44,5 +44,8 @@
     <Compile Include="Logger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="AwesomeLogger.nuspec" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
